2005-02-22 10:56  kraxel

	* cx88-cards.c, cx88-tvaudio.c, or51132.c, saa7134-core.c,
	  tuner-simple.c:

	- misc fixes from various people.
	- make or51132.c compile (not work) on 2.6.10.

2005-02-21 14:57  kraxel

	* Makefile, btcx-risc.c, bttv-cards.c, bttv-driver.c, cx88.h,
	  saa7134-core.c, doc/Cards, scripts/update:

	- add some bttv debug code.

2005-02-18 17:18  kraxel

	* doc/: lifeview.txt, liveview.txt:

	- one more rename *sigh*.

2005-02-18 17:16  kraxel

	* doc/: liveview.txt, saa7134-liveview.txt:

	- rename docfile.

2005-02-18 14:26  kraxel

	* cx88-dvb.c, cx88-mpeg.c, cx88.h, or51132.c, or51132.h:

	- more HD3000 stuff from Rusty Scott.

2005-02-18 13:28  kraxel

	* saa7134-cards.c, saa7134-dvb.c:

	- medion 7134 dvb-t support -- first cut, likely doesn't work yet.

2005-02-17 11:24  kraxel

	* cx88-dvb.c, or51132.c, or51132.h, doc/saa7134-liveview.txt:

	- or51132 update from Rusty Scott, some fixups from me ;)

2005-02-16 14:11  kraxel

	* cx88-blackbird.c, cx88-cards.c, cx88-input.c, cx88.h,
	  ir-common.c, ir-common.h:

	- move some bits from cx88-input to ir-common.
	- blackbird fixes, add new blackbird card.

2005-02-16 13:28  kraxel

	* compat.h:

	- make saa7134 build again on older kernels.

2005-02-16 13:14  kraxel

	* bttv-gpio.c, bttv-i2c.c, bttv.h, bttvp.h:

	- drop unused+obsolete i2c_info code.
	- fix use-after-free bug in bttv-gpio.

2005-02-16 12:18  kraxel

	* bttv-cards.c, cx22702.c:

	- cx22702 fix by Rob Noble.
	- bttv: HD2000 fix by Rusty Scott.

2005-02-15 16:59  kraxel

	* compat.h, cx88-cards.c, cx88-dvb.c, cx88-i2c.c, mt20xx.c,
	  saa7134-core.c, saa7134-video.c, tda8290.c, tuner-core.c,
	  tuner-simple.c, tuner.h, scripts/update:

	- merge some patches from mainline.
	- tuner kernel message fixups.
	- misc.

2005-02-15 12:29  kraxel

	* .bp/2.6/i2c-tuner:

	- more patch build fixups.

2005-02-15 11:51  kraxel

	* bttv-driver.c, compat.h, cx88-mpeg.c, cx88-tvaudio.c,